.debug/err_clean3.txt




























































































































































































































error[E0432]: unresolved import `nl_llm_new::primitive::Message`
 --> crates\nl_llm_new\examples\gemini_cli_chat\main.rs:1:29
  |
1 | use nl_llm_new::primitive::{Message, Role, PrimitiveRequest};
  |                             ^^^^^^^
  |                             |
  |                             no `Message` in `primitive`
  |                             help: a similar name exists in the module: `message`
  |
  = help: consider importing this variant instead:
          tokio::net::windows::named_pipe::PipeMode::Message


For more information about this error, try `rustc --explain E0432`.

